# smol-kv

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  musl.Dockerfile  readme.md  rust-toolchain.toml
.github/workflows/: ci.yaml  docker.yaml  main.yml  release.yaml
benchmark/: data.json  heavy-write.js  k6.js  plan.yaml  queries.js  testdata.csv
src/: auth.rs  benchmark.rs  collection.rs  error.rs  key.rs  kv.rs  kv_handler.rs  main.rs  middleware.rs  namespace.rs  sst.rs  sub.rs
tests/: test.py
web/: index.html  style.css
web/js/: app.js  loader.js
web/js/stores/: auth.js  backups.js  collections.js  data.js  live.js  tailwinds.js
web/views/: backups.html  browse.html  live.html  login.html  query.html  settings.html  sidebar.html  usage.html  welcome.html
