[package]
name = "smol-kv"
version = "0.3.3"
authors = ["mpw <x@mpw.sh>"]
edition = "2021"

[dependencies]
rocksdb-client = { git = "https://github.com/mpwsh/rocksdb-client", version = "0.1.64" }
sha1 = "0.10.6"
bytes = "1.5.0"
env_logger = "0.11.1"
serde_json = "1.0.104"
thiserror = "1.0.61"
serde = { version = "1.0.203", features = ["derive"] }
actix-web = "4.3.1"
log = "0.4.22"
rand = "0.8"
hex = "0.4.3"
num_cpus = "1.16.0"
actix-cors = "0.7.0"
ring = "0.17.8"
nanoid = "0.4.0"
chrono =  {version = "0.4.39", features = ["serde"]}
tokio = "1.43.0"
futures-util = "0.3.31"
async-stream = "0.3.6"

[profile.release]
opt-level = 3
lto = "thin"

[profile.debug-opt]
inherits = "release"
debug = 2
debug-assertions = true
incremental = true

[profile.deploy]
inherits = "release"
strip = "symbols"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

#[profile.release]
#debug = true
