[package]
name = "smol-kv"
version = "0.3.5"
authors = ["mpw <x@mpw.sh>"]
edition = "2021"

[dependencies]
rocksdb-client = { git = "https://github.com/mpwsh/rocksdb-client", version = "0.1.66" }
sha1 = "0.10.6"
bytes = "1.10.1"
env_logger = "0.11.7"
serde_json = "1.0.140"
thiserror = "1.0.69"
serde = { version = "1.0.219", features = ["derive"] }
actix-web = "4.10.2"
log = "0.4.26"
rand = "0.8"
hex = "0.4.3"
num_cpus = "1.16.0"
actix-cors = "0.7.1"
ring = "0.17.14"
nanoid = "0.4.0"
chrono =  {version = "0.4.40", features = ["serde"]}
tokio = "1.44.1"
futures-util = "0.3.31"
async-stream = "0.3.6"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
futures = "0.3.31"

[profile.release]
opt-level = 3
lto = "thin"

[profile.debug-opt]
inherits = "release"
debug = 2
debug-assertions = true
incremental = true

[profile.deploy]
inherits = "release"
strip = "symbols"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

#[profile.release]
#debug = true
