[package]
name = "smol-kv"
version = "0.4.0"
authors = ["mpw <x@mpw.sh>"]
edition = "2021"

[dependencies]
rocksdb-client = { git = "https://github.com/mpwsh/rocksdb-client", version = "0.2.1" }
#rocksdb-client = { path = "../rocksdb-client" }
sha1 = "0.11"
bytes = "1.11"
env_logger = "0.11"
serde_json = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.13"
log = "0.4"
rand = "0.8"
hex = "0.4"
num_cpus = "1.16"
actix-cors = "0.7"
ring = "0.17"
nanoid = "0.4"
chrono = { version = "0.4.40", features = ["serde"] }
tokio = "1.50"
futures-util = "0.3"
async-stream = "0.3"
actix-files = "0.6"
actix-multipart = "0.7"
futures = "0.3"

[profile.release]
opt-level = 3
lto = "thin"

[profile.debug-opt]
inherits = "release"
debug = 2
debug-assertions = true
incremental = true

[profile.deploy]
inherits = "release"
strip = "symbols"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
